# projeto-pipeline-excel

./: .gitignore  README.md  main.py  pyproject.toml
src/: controller.py  database.py  models.py  schemas.py
