[tool.poetry]
name = "projeto-entrevista-multilaser"
version = "0.1.0"
description = ""
authors = ["devmatheus0 <92046361+devmatheus0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
