[tool.poetry]
name = "projeto-entrevista-multilaser"
version = "0.1.0"
description = ""
authors = ["devmatheus0 <92046361+devmatheus0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
numpy = "^2.1.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
